# clingraph

./: .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGES.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  README.md  ThinkTank.md  binder-notebook.ipynb  environment.yml  init.py  mkdocs.yml  notebook.ipynb  notebook_example.ipynb  noxfile.py  package_usage.ipynb  pyproject.toml  setup.cfg  setup.py
.github/: conda.py  deploy.yml  pipsource.py  requirements.txt  trigger.sh
.github/conda/: meta.yaml
.github/workflows/: ci-tests.yml  deploy.yml  doc.yml  pipsource.yml  test.yml
clingraph/: __init__.py  __main__.py  clingo_utils.py  clingraph.py  clorm_orm.py  exception.py  exceptions.py  gif.py  graph.py  graphviz.py  logger.py  multigraph.py  orm.py  tex.py  utils.py
clingraph/graphviz/: __init__.py  imageio.py  tex.py
clingraph/tests/: test_factbase.py  test_graphviz.py  utils.py
docs/: conf.py  index.rst  notebook.ipynb  notebook_link.rst  package_usage.ipynb  requirements.txt
docs/_static/css/: custom.css
docs/clingraph/: api.rst  console.rst  installation.rst  svg.rst  syntax.rst
docs/clingraph/examples/: color.md  index.md
examples/: README.md
examples/asprilo/: README.md  asprilo_viz.lp  asprilo_viz_good.lp
examples/asprilo/asprilo/: action-MPP.lp  asprilo.lp  encoding-a.lp  goal-D-a.lp  highways.lp  input.lp  instance1.lp  instance2.lp  output-MPPD.lp  quantities.lp  sm.lp
examples/ast/: README.md  color.lp  program.lp  reify_ast.py  viz.lp
examples/basic/example1/: example_1.lp
examples/basic/example2/: example_2.lp
examples/basic/example3/: example_3.lp
examples/basic/example4/: example_4.lp
examples/basic/example5/: clingo_prg.lp
examples/basic/example6/: example_6.lp
examples/color/: README.md  color.lp
examples/cube/: README.md  cube.lp
examples/doc/: README.md
examples/doc/example1/: example1.lp
examples/doc/example2/: example2.lp
examples/doc/example3/: example3.lp
examples/doc/example4/: example4.lp
examples/doc/example5/: example5_encoding.lp  example5_viz.lp
examples/doc/example7/: example7.lp
examples/elevator/: README.md  encoding.lp  instance.lp  viz.lp
examples/expandible_family_tree/: README.md  encoding.lp  viz.lp
examples/family_tree/: README.md  viz.lp
examples/lights/: README.md  lights.lp
examples/mapf/: README.md  viz-plan.lp  viz.lp
examples/mapf/instances/: empty_x6_y6.lp  maze_s10_a15_h38.lp  plan-swap.lp  plan.lp  random_s10_a5_c50_h16.lp  random_x10_y10_a5_c75.lp  random_x8_y8_a3_c75.lp  room_s19_a5_w4_h25.lp  room_x10_y10_a5_w5.lp  room_x8_y8_a3_w5.lp  warehouse_x8_y8_a3_w5.lp
examples/minesweeper/: README.md  encoding.lp  viz.lp
examples/minotaur/: README.md  instance.lp  minotaur.lp  viz.lp
examples/multi_edge/: README.md  encoding.lp  viz.lp
examples/office/: README.md  instance.lp  viz.lp
examples/propagator/: README.md  clingraph-prop.lp
examples/propagator/sudoku/: encoding.lp  viz-sudoku-solving.lp  viz_propagator.lp
examples/queens/: README.md  encoding.lp  viz.lp
examples/queens_interactive/: README.md  encoding.lp  viz.lp
examples/reify/: README.md  program.lp  program1.lp  program2.lp  viz.lp  viz_all.lp  viz_basic.lp  viz_legend.lp  viz_theory.lp
examples/shortest_path/: README.md  encoding.lp  viz.lp
examples/subgraphs/: README.md  encoding.lp  viz.lp
examples/sudoku/: README.md  encoding.lp  instance.lp  sudoku.lp  viz.lp
examples/template/: viz.lp
examples/transition_system/: README.md  light_system.lp  system.tex  viz.lp
examples/traveling_sales_person/: README.md  encoding.lp  instance.lp  viz.lp
examples/traveling_sales_person_clickable/: README.md  encoding.lp  instance.lp  viz.lp
examples/tree/: README.md  viz.lp
examples/tree_expandable/: README.md  instance.lp  viz.lp
examples/uml_class/: README.md  instance.lp  viz.lp
examples/uml_class_config/: README.md  instance.lp  viz.lp
src/clingraph/: __init__.py  clingo_utils.py  exceptions.py  gif.py  graphviz.py  logger.py  orm.py  tex.py  utils.py
tests/: test_factbase.py  test_graphviz.py  test_library.py  utils.py
