[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "clingraph"
authors = [{ name = "Susana Hahn", email = "hahnmartinlu@uni-potsdam.de" }]
description = "A visualizer for graphs defined as facts with special integration for clingo."
requires-python = ">=3.9"
license = { file = "LICENSE" }
dynamic = ["version"]
readme = "README.md"
dependencies = [
    "clingo>=5.5.0",
    "clorm>=1.3.6",
    "graphviz",
    "networkx>=2.6",
    "jsonschema",
    "jinja2",
]

[project.urls]
Homepage = "https://github.com/potassco/clingraph"

[project.optional-dependencies]
format = ["black", "isort", "autoflake"]
lint_pylint = ["pylint"]
typecheck = ["types-setuptools", "mypy"]
test = ["coverage[toml]", "pytest", "pytest-cov"]
# doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mkdoclingo"]
doc = [
    "nbsphinx",
    "sphinx",
    "furo",
    "sphinx_inline_tabs",
    "sphinx_copybutton",
    "myst-parser",
]
tex = ["dot2tex"]
gif = ["imageio==2.28", "pillow"]
dev = ["clingraph[test,typecheck,lint_pylint]"]

[project.scripts]
clingraph = "clingraph.__init__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-attributes = 7
max-bool-expr = 5
max-branches = 12
max-locals = 30
max-parents = 7
max-public-methods = 20
max-returns = 10
max-statements = 50
min-public-methods = 1

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true

[tool.pylint.basic]
argument-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
variable-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
good-names = ["_"]

[tool.coverage.run]
source = ["clingraph", "tests"]
omit = ["*/clingraph/__main__.py"]

[tool.coverage.report]
exclude_lines = ["assert", "nocoverage"]
