[metadata]
name = clingraph
version = 0.1.0
author = Susana Hahn
author_email = hahnmartinlu@uni-potsdam.de
description = A visualizer for graphs defined as logic programs
url = https://github.com/potassco/clingraph

[options]
packages = clingraph
install_requires =
    clingo>=5.5
    clorm>=1.3
    graphviz
    networkx>=2.6

[options.extras_require]
dev =
    pylint>=2.12
    pytest>=6.2
test =
    pytest>=6.2
doc =
    nbsphinx
    sphinx
    sphinx_rtd_theme
tex =
    dot2tex
gif =
    imageio>=2.14
ipython =
    ipython>=8.0

[options.entry_points]
console_scripts =
    clingraph = clingraph:main
