[metadata]
name = clingraph
version = 1.0.0
author = Susana Hahn
author_email = hahnmartinlu@uni-potsdam.de
description = A visualizer for graphs defined as facts with special integration for clingo 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/potassco/clingraph

[options]
packages = clingraph
install_requires =
    clingo>=5.5
    clorm>=1.3.6
    graphviz
    networkx>=2.6
    jsonschema

[options.extras_require]
dev =
    pylint>=2.12
    pytest>=6.2
test =
    pytest>=6.2
doc =
    nbsphinx
    sphinx
    sphinx_rtd_theme
tex =
    dot2tex
gif =
    imageio>=2.14

[options.entry_points]
console_scripts =
    clingraph = clingraph:main
